--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <footer>
         <a type="application/rss+xml" href="deku_rss.xml">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="peru" class="bi bi-rss"
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="goldenrod" class="bi bi-rss"
                 viewBox="0 0 16 16">
                 <path
                     d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
